syntax = "proto3";
package messages;

import "google/protobuf/timestamp.proto";

message Friend {
    string  friend_id  = 1;
    string  user_id    = 2;
    bool    accepted   = 3;
    google.protobuf.Timestamp  created_at  = 4;
    google.protobuf.Timestamp  updated_at  = 5;
}